# GeneralObjectDetection

./: CMakeLists.txt  main.cpp
src/: DepthAiCamera.cpp  DepthAiCamera.h  Processing.cpp  Processing.h  RealSenseCamera.cpp  RealSenseCamera.h  SpeedEstimation.cpp  SpeedEstimationUtil.cpp  StereoCamera.h  TrackingObject.cpp  constants.h  utility.cpp  utility.hpp
